# arctic-hen7.github.io

./: .editorconfig  .eleventy.js  .gitignore  404.html  Cargo.toml  README.md  about.md  bonnie.toml  feed.xml  index.html  package-lock.json  package.json  postcss.config.js  style.css  tailwind.config.js  tailwind.css
.blog/: 03ab02d7-f196-46d7-a1f9-d0c951245889.json  4726b90d-613e-4a45-b419-44cd6ec887a4.json  496eb33a-c137-4afa-a03c-2f165d522a98.json  5633d380-fede-4c98-8c31-fc21610e4e5e.json  7adca2f7-ab95-41e1-8d0d-4bbc020ca018.json  bbb3e057-0f97-45a2-aa05-e791802fceee.json  c26d230f-a546-4da0-be18-9857e168d7b9.json  eede1692-be41-404a-93e8-d4b048db21bc.json  sotto.json
.github/workflows/: cd.yml
.perseus/: bundle.js  bundle.wasm
.perseus/static/: tailwind.css
about/: index.html
blog/: feed.xml  index.html
blog/dev/: feed.xml  index.html
blog/feeds/: index.html
blog/prod/: feed.xml  index.html
blog/sophos/: feed.xml  index.html
cli/: Cargo.toml  README.md
cli/src/: cli.rs  import_post.rs  list_posts.rs  main.rs  parse_post.rs  post.rs
cli/src/shortform/: create_shortform.rs  delete_shortform.rs  list_shortform.rs  mod.rs
contact/: index.html
post/03ab02d7-f196-46d7-a1f9-d0c951245889/: index.html
post/4726b90d-613e-4a45-b419-44cd6ec887a4/: index.html
post/496eb33a-c137-4afa-a03c-2f165d522a98/: index.html
post/5633d380-fede-4c98-8c31-fc21610e4e5e/: index.html
post/sotto/: index.html
posts/: index.html
projects/: README.md  index.html
resume/: .gitignore  README.md  framesurge.toml  personal.toml  quantorium.toml  unsw.toml
shortform/: index.html
sotto/: 404.html  index.html  robots.txt  sitemap.xml
src/: 404.njk  about.md  about.njk  container.rs  error_pages.rs  error_views.rs  global_state.rs  index.html  index.njk  main.rs  post.rs  projects.njk  rss.rs
static/: org.css  org.css.old
styles/: index.css
templates/: template_dev.md  template_prod.md  template_sophos.md
(+167 files in other folders)
