[package]
name = "personal-site"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Dependencies for the engine and the browser go here
[dependencies]
perseus = { version = "=0.4.0-beta.17", features = [] }
sycamore = "^0.8.1"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
thiserror = "1"
chrono = { version = "0.4", features = [ "serde" ] }
fmterr = "0.1"

# Engine-only dependencies go here
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
anyhow = "1"
uuid = { version = "1", features = [ "v4", "serde" ] }
pulldown-cmark = "0.9"
toml = "0.7"

# Browser-only dependencies go here
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-net = { version = "0.2", features = [ "http" ] }
web-sys = { version = "0.3", features = [ "Location", "Window" ] }
uuid = { version = "1", features = [ "v4", "serde", "js" ] } # Defined again here for the `js` flag
js-sys = "0.3"

[workspace]
members = [ "cli/" ]
