[package]
name = "delilah-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # This is a simple CLI for my own personal use
urlencoding = "2"
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
regex = "1"
octocrab = "0.16"
dotenv = "0.15"
tokio = { version = "1", features = [ "macros", "rt", "rt-multi-thread" ] }
chrono = { version = "0.4", features = [ "serde" ] }
uuid = { version = "1", features = [ "v4", "serde" ] }
base64 = "0.5" # Yes, this is outdated, but it supports MIME encodings
pulldown-cmark = "0.9"
katex = "0.4"
futures = "0.3"

[[bin]]
path = "src/main.rs"
name = "delilah"
